Resolve compile errors due to java version
Signed-off-by: chase <yun.er.run@gmail.com>